[project]
name = "h4_toolkit"
description = "A collection of useful user interface extensions for ComfyUI to improve workflow and provide helpful feedback."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["colorama>=0.4.6", "numpy>=1.24.0"]

[project.urls]
Repository = "https://github.com/m3rr/h4_ToolKit"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/m3rr/h4_ToolKit/wiki"
"Bug Tracker" = "https://github.com/m3rr/h4_ToolKit/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "h4_ToolKit"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

